--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    meta content="width=device-width, initial-scale=1.0" name="viewport" /
     title
       | Lag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
