add new navbar files and incorporate

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,14 +1,17 @@
 doctype html
-html
+html.no-js
   head
     meta content="width=device-width, initial-scale=1.0" name="viewport" /
     title
-      | Lag
+      | LAG
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
+
   body
+    = render 'layouts/navbar'
     .text-center
       = flash_messages
-    .container
-      = yield
+    main.cd-main-content
+      .content-wrapper
+        = yield
