--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,3 +2,5 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,700);
