add devise content to navigation

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,7 @@ html.no-js
     = csrf_meta_tags
 
   body
-    = render 'layouts/navbar'
+    = render 'layouts/nav'
     .text-center
       = flash_messages
     main.cd-main-content
