--- a/app/views/layouts/_nav.slim
+++ b/app/views/layouts/_nav.slim
@@ -1,5 +1,5 @@
 header.cd-main-header
-  a.cd-logo href="#0"
+  = link_to root_path, class: "cd-logo" do
     = image_tag('cd-logo.svg')
   .cd-search.is-hidden
     form action="#0"
@@ -14,17 +14,22 @@ header.cd-main-header
         a href="#0"  Tour
       li
         a href="#0"  Support
-      li.has-children.account
-        a href="#0"
-          = image_tag('cd-avatar.png')
-          | Account
-        ul
-          li
-            a href="#0"  My Account
-          li
-            a href="#0"  Edit Account
-          li
-            a href="#0"  Logout
+      - if user_signed_in?
+        li.has-children.account
+          a href="#0"
+            = image_tag('cd-avatar.png')
+            = current_user.username
+          ul
+            li = link_to "My profile", "#"
+            li = link_to "Edit Account", edit_user_registration_path
+            li = link_to "Logout", destroy_user_session_path, method: :delete
+              a href="#0"  Logout
+      - else
+        li.has-children.account
+          = link_to "Account", "#"
+          ul
+            li = link_to "Sign Up", new_user_registration_path
+            li = link_to "Sign In", new_user_session_path
 /! .cd-main-header
 main.cd-main-content
   nav.cd-side-nav
