--- a/app/views/users/registrations/edit.html.slim
+++ b/app/views/users/registrations/edit.html.slim
@@ -1,13 +1,14 @@
 h2
-  | Edit 
+  | Edit
   = resource_name.to_s.humanize
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = f.error_notification
   .form-inputs
+    = f.input :username, disabled: true, hint: 'If you would like to change your username, please contact support.'
     = f.input :email, required: true, autofocus: true
     - if devise_mapping.confirmable? && resource.pending_reconfirmation?
       p
-        | Currently waiting confirmation for: 
+        | Currently waiting confirmation for:
         = resource.unconfirmed_email
     = f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false
     = f.input :password_confirmation, required: false
@@ -17,6 +18,6 @@ h2
 h3
   | Cancel my account
 p
-  | Unhappy? 
+  | Unhappy?
   = link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
 = link_to "Back", :back
