--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -233,7 +233,7 @@ Header
   transform: translateY(-50%);
   height: 16px;
   width: 16px;
-  background: image-url(cd-search.svg) no-repeat 0 0;
+  background: url(cd-search.svg) no-repeat 0 0;
 }
 .cd-search input {
   padding-left: 32px;
@@ -439,7 +439,7 @@ Sidebar
   transform: translateY(-50%);
   height: 16px;
   width: 16px;
-  background: image-url(cd-nav-icons.svg) no-repeat 0 0;
+  background: url(cd-nav-icons.svg) no-repeat 0 0;
 }
 .cd-side-nav > ul > li.overview > a::before {
   background-position: -64px 0;
@@ -641,7 +641,7 @@ Sidebar
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
-  background: image-url(cd-arrow.svg);
+  background: url(cd-arrow.svg);
 }
 .has-children.selected > ul {
   display: block;
