--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,3 +4,4 @@
 @import "font-awesome";
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,700);
+@import url(http://fonts.googleapis.com/css?family=Raleway:200,500,700,800);
