--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -12,8 +12,8 @@ html {
 }
 
 body {
-  font-size: 1.6rem;
-  font-family: "Open Sans", sans-serif;
+  font-size: 1.3rem;
+  font-family: "Raleway", "Open Sans", sans-serif;
   color: #3e454c;
   background-color: #bdc3c7;
 }
@@ -24,12 +24,17 @@ body::after {
 }
 
 a {
-  color: #1784c7;
+  color: #2fa0ec;
   text-decoration: none;
+  outline: none;
+}
+
+a:hover, a:focus {
+  color: #000000;
 }
 
 input {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Raleway", "Open Sans", sans-serif;
   font-size: 1.6rem;
 }
 
