--- a/app/views/users/registrations/new.html.slim
+++ b/app/views/users/registrations/new.html.slim
@@ -7,6 +7,7 @@ h1
     = f.input :username, required: true
     = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length)
     = f.input :password_confirmation, required: true
+    = f.input :terms, required: true, as: :boolean, label: ("I agree to the #{link_to 'Terms of Service', terms_path, target: "_blank"}.").html_safe
   .form-actions
     = f.button :submit, "Sign up"
 = render "users/shared/links"
