--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3,3 +3,7 @@
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,700);
 @import url(http://fonts.googleapis.com/css?family=Raleway:200,500,700,800);
+
+.fa-asterisk {
+  color: red;
+}
