--- a/app/assets/stylesheets/user_profiles.scss
+++ b/app/assets/stylesheets/user_profiles.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the UserProfiles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  padding-top: 50px
+}
+
+blockquote {
+  border-left: 5px solid #1784C7
+}
