--- a/app/views/layouts/_nav.slim
+++ b/app/views/layouts/_nav.slim
@@ -18,7 +18,7 @@ header.cd-main-header
               /! will be selected user's avatar
             = current_user.username
           ul
-            li = link_to "My profile", "#"
+            li = link_to "My profile", my_profile_path
             li = link_to "Edit Account", edit_user_registration_path
             li = link_to "Logout", destroy_user_session_path, method: :delete
       - else
