--- a/app/views/layouts/_nav.slim
+++ b/app/views/layouts/_nav.slim
@@ -80,14 +80,7 @@ main.cd-main-content
           li
             a href="#0"  Edit Image
       li.has-children.users
-        a href="#0"  Users
-        ul
-          li
-            a href="#0"  All Users
-          li
-            a href="#0"  Edit User
-          li
-            a href="#0"  Add User
+        = link_to "All Users", user_profiles_path
     ul
       li.cd-label Action
       li.action-btn
