update placeholder in profile form and change placeholder image call

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,7 +2,7 @@
 @import "bootstrap";
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,700);
-@import url(http://fonts.googleapis.com/css?family=Raleway:200,500,700,800);
+@import url(https://fonts.googleapis.com/css?family=Raleway:200,500,700,800);
 
 .fa-asterisk {
   color: red;
