--- a/app/views/my_profiles/show.html.slim
+++ b/app/views/my_profiles/show.html.slim
@@ -1,7 +1,7 @@
 .text-center.h1 = @user_profile.user.username
 
 .col-md-3
-  p = image_tag("http://placehold.it/200x200")
+  p = image_tag("//placehold.it/200x200")
   hr
   h4 = link_to "View My Website", "http://#{@user_profile.website}", target: "_blank"
   hr
