--- a/app/views/user_profiles/index.html.slim
+++ b/app/views/user_profiles/index.html.slim
@@ -7,7 +7,7 @@
         = link_to user_profile.user.username, user_profile
 
       .panel-body
-        = image_tag("http://placehold.it/150x150")
+        = image_tag("//placehold.it/150x150")
 
       .panel-footer
         p
