add relation to post / topic model and modify forum show and form view

--- a/app/views/forums/show.html.slim
+++ b/app/views/forums/show.html.slim
@@ -3,4 +3,4 @@ h2 = @forum.description
 
 = link_to "Edit", edit_forum_path(@forum)
 = link_to "Delete", forum_path(@forum), method: :delete, data: { confirm: "Are you sure?" }
-=  link_to "Forums", forum_path
+= link_to "Forums", forums_path
