--- a/app/assets/stylesheets/forum.scss
+++ b/app/assets/stylesheets/forum.scss
@@ -1,3 +1,31 @@
 // Place all the styles related to the forum controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#forums {
+  background: white;
+  padding: 2em 5%;
+  border-radius: .5em;
+  .forum {
+    margin: 1em 0;
+    padding: 1em 0;
+    border-bottom: 1px solid #D1D1D1;
+    .name {
+      margin: 0;
+      a {
+        color: #397CAC;
+        text-decoratin: none;
+        font-weight: 100;
+        font-size: 1.25em;
+      }
+    }
+    .description {
+
+    }
+    .date {
+      margin-top: .25rem;
+      font-size: 0.9rem;
+      color: #B2BAC2;
+    }
+  }
+}
