--- a/app/assets/stylesheets/forum.scss
+++ b/app/assets/stylesheets/forum.scss
@@ -4,8 +4,12 @@
 
 #forums {
   background: white;
-  padding: 2em 5%;
+  padding: 1em 5%;
   border-radius: .5em;
+  h1 {
+    text-align: center;
+    padding: .25em 0;
+  }
   .forum {
     margin: 1em 0;
     padding: 1em 0;
@@ -20,11 +24,12 @@
       }
     }
     .description {
-
+      font-weight: 100;
+      font-size: 16px;
     }
     .date {
       margin-top: .25rem;
-      font-size: 0.9rem;
+      font-size: 1rem;
       color: #B2BAC2;
     }
   }
