--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Topics controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#topics {
+  background:white;
+  padding: 1em 5%;
+  border-radius: .5em;
+  h1 {
+    text-align: center;
+    padding: .25em 0;
+    font-size: 2em;
+  }
+  h2 {
+    padding: .5em 0;
+    font-size: 1.5em;
+  }
+}
