--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,6 +4,11 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,700);
 @import url(https://fonts.googleapis.com/css?family=Raleway:200,500,700,800);
 
+@font-face {
+  font-family: "Mix Redux";
+  src: font-url("Mix-Redux.otf") format("truetype");
+}
+
 .fa-asterisk {
   color: red;
 }
