--- a/app/views/user_profiles/show.html.slim
+++ b/app/views/user_profiles/show.html.slim
@@ -1,4 +1,4 @@
-.text-center.h1 = @user_profile.user.username
+h1 = @user_profile.user.username
 
 .col-md-3
   p = image_tag("//placehold.it/200x200")
