--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -14,4 +14,16 @@
     padding: .5em 0;
     font-size: 1.5em;
   }
+  hr {
+    border-color: #D1D1D1;
+  }
+  .topic {
+    border-bottom: 1px solid #D1D1D1;
+    padding-bottom: 1em;
+    margin-bottom: 1em;
+    .topic_author {
+      font-size: 0.75rem;
+      text-transform: uppercase;
+    }
+  }
 }
