--- a/app/views/topics/_form.slim
+++ b/app/views/topics/_form.slim
@@ -1,4 +1,4 @@
-= simple_form_for @topic, url: forum_topics_path(forum_id: @topic.forum_id) do |t|
-  = t.input :title
-  = t.input :message, maxlength: 200, hint: "Max 200 characters"
+= simple_form_for @topic do |t|
+  = t.input :title, :input_html => { :rows => 1 }
+  = t.input :message, :input_html => { :rows => 10 }
   = t.submit
