only allow admin or topic owner to delete topic

--- a/app/views/topics/show.html.slim
+++ b/app/views/topics/show.html.slim
@@ -1,5 +1,6 @@
 #topics
   .topic
-    p.pull-right = link_to "Delete Topic", topic_path(@topic), method: :delete, data: { confirm: "Are you sure?" }
+    - if current_user.admin || topic_owner
+      p.pull-right = link_to "Delete Topic", topic_path(@topic), method: :delete, data: { confirm: "Are you sure?" }
     h1 = @topic.title
     p = @topic.message
