--- a/app/views/forums/index.html.slim
+++ b/app/views/forums/index.html.slim
@@ -1,7 +1,7 @@
 #forums
   h1 Forums
 
-  - @forums.each do |forum|
+  - @forums.order('name ASC').each do |forum|
     .forum
       h2.name = link_to forum.name, forum
       h4.description = forum.description
