--- a/app/views/comments/_comment.slim
+++ b/app/views/comments/_comment.slim
@@ -1,2 +1,11 @@
 .comment
   p = comment.content
+  p
+    - if comment.updated_at != comment.created_at
+      | Created
+      =<> time_ago_in_words(comment.created_at)
+    - elsif comment.updated?
+      | Edited
+      =<> time_ago_in_words(comment.updated_at)
+    | by
+    =<> link_to comment.user.username, comment.user.user_profile
