--- a/app/views/topics/show.html.slim
+++ b/app/views/topics/show.html.slim
@@ -6,7 +6,9 @@
     p = @topic.message
 
     #comments
-      h2 = @topic.comments.count
+      h2
+        => @topic.comments.count
+        | comments
       == render @topic.comments
 
       h3 Reply to Thread
