--- a/app/views/comments/_comment.slim
+++ b/app/views/comments/_comment.slim
@@ -1,12 +1,13 @@
 .comment
   p = comment.content
-  p = link_to "Edit comment", edit_forum_topic_comment_path(topic_id: @topic.id, id: comment.id)
-  p = link_to "Delete comment", forum_topic_comment_path(topic_id: @topic.id, id: comment.id), method: :delete, data: { confirm: "Are you sure?" }
+  - if current_user.admin || comment.user_id == current_user.id
+    p = link_to "Edit comment", edit_forum_topic_comment_path(topic_id: @topic.id, id: comment.id)
+    p = link_to "Delete comment", forum_topic_comment_path(topic_id: @topic.id, id: comment.id), method: :delete, data: { confirm: "Are you sure?" }
   p
-    - if comment.updated_at != comment.created_at
+    - if comment.created_at.to_i == comment.updated_at.to_i
       | Created
       =<> time_ago_in_words(comment.created_at)
-    - elsif comment.updated?
+    - elsif comment.updated_at.to_i != comment.created_at.to_i
       | Edited
       =<> time_ago_in_words(comment.updated_at)
     | by
