--- a/app/views/comments/_form.slim
+++ b/app/views/comments/_form.slim
@@ -1,3 +1,3 @@
 = simple_form_for [@topic, @topic.comments.build], :url => forum_topic_comments_path(topic_id: @topic.id) do |c|
-  = c.input :content
+  = c.input :content, label: "Comment", :input_html => { rows: 5 }
   = c.submit
