add buttons to forums, topics, comments

--- a/app/views/comments/_comment.slim
+++ b/app/views/comments/_comment.slim
@@ -1,8 +1,9 @@
 .comment
   p = comment.content
   - if current_user.admin || comment.user_id == current_user.id
-    p = link_to "Edit comment", edit_forum_topic_comment_path(topic_id: @topic.id, id: comment.id)
-    p = link_to "Delete comment", forum_topic_comment_path(topic_id: @topic.id, id: comment.id), method: :delete, data: { confirm: "Are you sure?" }
+    .pull-right
+      = link_to "Edit comment", edit_forum_topic_comment_path(topic_id: @topic.id, id: comment.id), class: "btn btn-primary btn-xs"
+      =< link_to "Delete comment", forum_topic_comment_path(topic_id: @topic.id, id: comment.id), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger btn-xs"
   p
     - if comment.created_at.to_i == comment.updated_at.to_i
       | Created
