--- a/app/views/forums/index.html.slim
+++ b/app/views/forums/index.html.slim
@@ -12,4 +12,4 @@
         =<> link_to forum.user.username, forum.user.user_profile
 
   - if current_user.admin
-    = link_to "Add a new forum", new_forum_path
+    = link_to "Add a new forum", new_forum_path, class: "btn btn-primary btn-sm"
