--- a/app/views/topics/show.html.slim
+++ b/app/views/topics/show.html.slim
@@ -1,7 +1,7 @@
 #topics
   .topic
     - if current_user.admin || topic_owner
-      p.pull-right = link_to "Delete Topic", topic_path(@topic), method: :delete, data: { confirm: "Are you sure?" }
+      p.pull-right = link_to "Delete Topic", topic_path(@topic), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger btn-xs"
     h1 = @topic.title
     p = @topic.message
 
