--- a/app/views/my_profiles/show.html.slim
+++ b/app/views/my_profiles/show.html.slim
@@ -1,4 +1,5 @@
 h1 = @user_profile.user.username
+h5 = link_to "Edit my profile", edit_user_profile_path(@current_user.user_profile)
 
 .col-md-3
   p = image_tag("//placehold.it/200x200")
