--- a/app/views/my_profiles/show.html.slim
+++ b/app/views/my_profiles/show.html.slim
@@ -2,7 +2,7 @@ h1 = @user_profile.user.username
 h5 = link_to "Edit my profile", edit_user_profile_path(@current_user.user_profile)
 
 .col-md-3
-  p = image_tag("avatars/#{@user_profile.avatar.filename}")
+  p = image_tag("avatars/#{user_avatar}")
   hr
   h4 = link_to "View My Website", "http://#{@user_profile.website}", target: "_blank"
   hr
