--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -419,6 +419,15 @@ Sidebar
   font-size: 1rem;
   letter-spacing: .1em;
 }
+.cd-side-nav .cd-label-link a {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #1784c7;
+  font-size: 1rem;
+  letter-spacing: .1em;
+  padding: 1em 5%;
+  text-align: left;
+}
 .cd-side-nav a {
   position: relative;
   color: #ffffff;
