--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the static_pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+ul li {
+  margin: 10px;
+  font-weight: bold;
+}
+
+ul li a {
+  font-weight: normal;
+}
+
+h6 {
+  text-transform: uppercase;
+  padding-top: 10px;
+}
