add fixes for styling on nav bar

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2,13 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-ul li {
+.list {
   margin: 10px;
   font-weight: bold;
-}
-
-ul li a {
-  font-weight: normal;
 }
 
 h6 {
