--- a/app/views/static_pages/privacy.html.slim
+++ b/app/views/static_pages/privacy.html.slim
@@ -37,9 +37,9 @@ h3#infoUs
   =< link_to "Top", "#top", class: "top"
 strong How do we use your information?
 p We may use the information we collect from you when you register, make a purchase, sign up for our newsletter, respond to a survey or marketing communication, surf the website, or use certain other site features in the following ways:
-ul
-  li To personalize your experience and to allow us to deliver the type of content and product offerings in which you are most interested.
-  li To send periodic emails regarding your order or other products and services.
+
+.list To personalize your experience and to allow us to deliver the type of content and product offerings in which you are most interested.
+.list To send periodic emails regarding your order or other products and services.
 
 h3#infoPro
   | How do we protect our information
@@ -60,8 +60,8 @@ h3#cookies
 p Yes. Cookies are small files that a site or its service provider transfers to your computer's hard drive through your Web browser (if you allow) that enables the site's or service provider's systems to recognize your browser and capture and remember certain information. For instance, we use cookies to help us remember and process the items in your shopping cart. They are also used to help us understand your preferences based on previous or current site activity, which enables us to provide you with improved services. We also use cookies to help us compile aggregate data about site traffic and site interaction so that we can offer better site experiences and tools in the future.
 
 p We use cookies to:
-ul
-  li Understand and save user's preferences for future visits.
+
+.list Understand and save user's preferences for future visits.
 
 p You can choose to have your computer warn you each time a cookie is being sent, or you can choose to turn off all cookies. You do this through your browser settings. Since browser is a little different, look at your browser's Help Menu to learn the correct way to modify your cookies.
 
@@ -96,12 +96,12 @@ p The Fair Information Practices Principles form the backbone of privacy law in 
 p In order to be in line with Fair Information Practices we will take the following responsive action, should a data breach occur:
 
 p We will notify you via email:
-ul
-  li Within 7 business days
+
+.list Within 7 business days
 
 p We will notify the users via in-site notification:
-ul
-  li Within 1 business day
+
+.list Within 1 business day
 
 p We also agree to the Individual Redress Principle which requires that individuals have the right to legally pursue enforceable rights against data collectors and processors who fail to adhere to the law. This principle requires not only that individuals have enforceable rights against data users, but also that individuals have recourse to courts or government agencies to investigate and/or prosecute non-compliance by data processors.
 
@@ -149,13 +149,13 @@ ul
   li Send information, respond to inquiries, and/or other requests or questions
 
 p To be in accordance with CANSPAM, we agree to the following:
-ul
-  li Not use false or misleading subjects or email addresses.
-  li Identify the message as an advertisement in some reasonable way.
-  li Include the physical address of our business or site headquarters.
-  li Monitor third-party email marketing services for compliance, if one is used.
-  li Honor opt-out/unsubscribe requests quickly.
-  li Allow users to unsubscribe by using the link at the bottom of each email.
+
+.list Not use false or misleading subjects or email addresses.
+.list Identify the message as an advertisement in some reasonable way.
+.list Include the physical address of our business or site headquarters.
+.list Monitor third-party email marketing services for compliance, if one is used.
+.list Honor opt-out/unsubscribe requests quickly.
+.list Allow users to unsubscribe by using the link at the bottom of each email.
 
 p
   | If at any time you would like to unsubscribe from receiving future emails, you can send us a message through our
@@ -177,7 +177,7 @@ pre
   br
   | USA
   br
-  | marcel.sands84@gmail.com
+  = mail_to "marcel.sands84@gmail.com", "marcel.sands84@gmail.com"
   br
   | 602.492.5471
 
