--- a/app/views/forums/index.html.slim
+++ b/app/views/forums/index.html.slim
@@ -11,5 +11,5 @@
         | ago by
         =<> link_to forum.user.username, forum.user.user_profile
 
-  - if current_user.admin
+  - if user_signed_in? && current_user.admin
     = link_to "Add a new forum", new_forum_path, class: "btn btn-primary btn-sm"
