--- a/app/views/layouts/_header_nav.slim
+++ b/app/views/layouts/_header_nav.slim
@@ -14,7 +14,10 @@ header.cd-main-header
       - if user_signed_in?
         li.has-children.account
           a href="#0"
-            = image_tag("avatars/#{current_user_avatar}", size: "64")
+            - if current_user.user_profile.present?
+              = image_tag("avatars/#{current_user_avatar}", size: "64")
+            - else
+              = image_tag("avatars/default_avatar.png", size: "64")
             = current_user.username
           ul
             li = link_to "My profile", my_profile_path
