add personal web page links to about us page

--- a/app/views/static_pages/about.html.slim
+++ b/app/views/static_pages/about.html.slim
@@ -2,9 +2,9 @@ h1 About Us
 
 p.about-us
   | Little Adventist Geeks started as an idea by
-  =<> link_to "Duane Taffe", nil
+  =<> link_to "Duane Taffe", "http://www.duanetaffe.com", target: "_blank"
   | and
-  =<> link_to "Marcel Sands", nil
+  =<> link_to "Marcel Sands", "http://www.marcel-sm.com", target: "_blank"
   |.  After months of conversation and brainstorming, the vision has started to become a reality.
 
 p.about-us
