--- a/app/views/layouts/_header_nav.slim
+++ b/app/views/layouts/_header_nav.slim
@@ -10,7 +10,7 @@ header.cd-main-header
   nav.cd-nav
     ul.cd-top-nav
       li = link_to "About", about_path
-      li = link_to "Support", "#"
+      li = link_to "Support", support_path
       - if user_signed_in?
         li.has-children.account
           a href="#0"
