--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -1,4 +1,6 @@
 h1 = @event.title
+- if @event.user == current_user
+  h5 = link_to "Edit my event", edit_event_path
 p = @event.event_organizer
 p = @event.description
 p = @event.date
