add update action and modify time in show views for events

--- a/app/views/events/index.html.slim
+++ b/app/views/events/index.html.slim
@@ -10,6 +10,6 @@ h1 All Events
         = event.description
 
       .panel-footer
-        = event.date
+        = event.date.strftime("%a, %B %d, %Y")
         br
-        = event.time_start
+        = event.time_start.strftime("%I:%M %p")
