--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -3,9 +3,9 @@ h1 = @event.title
   h5 = link_to "Edit my event", edit_event_path
 p = @event.event_organizer
 p = @event.description
-p = @event.date
-p = @event.time_start
-p = @event.time_end
+p = @event.date.strftime("%a, %B %d, %Y")
+p = @event.time_start.strftime("%I:%M %p")
+p = @event.time_end.strftime("%I:%M %p")
 p = @event.address
 p = @event.state
 p = @event.zip_code
