--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -7,8 +7,10 @@ p = @event.date.strftime("%a, %B %d, %Y")
 p = @event.time_start.strftime("%I:%M %p")
 p = @event.time_end.strftime("%I:%M %p")
 p = @event.address
+p = @event.city
 p = @event.state
 p = @event.zip_code
+p = link_to "MAP", "http://www.google.com/maps/place/#{@event.address},#{@event.city},#{@event.state},#{@event.zip_code}/", target: "_blank"
 p = @event.dress_code
 p = @event.price
 p = @event.food_provided
